feat: Implement NOAA aviation weather ingestion with comprehensive testing
- Add abstract base classes (AbstractNoaaIngestionOrchestrator, AbstractNoaaIngestionApp)
  to eliminate code duplication between METAR and TAF implementations
- Refactor SpeedLayerProcessor to be source-agnostic
- Implement NoaaConfiguration with TG FTP endpoint support
- Create comprehensive test suite (139 tests, 100% pass rate)
- Improve coverage for schedulePeriodicIngestion (0% → 90%)
- Apply code quality improvements (expression lambdas, enhanced switches, async testing)
- Fix Mockito abstract class mocking and other test issues

Version: 1.10.0-SNAPSHOT
Test Results: 139 tests passing (0 failures, 0 errors)