@@ -1,6 +1,6 @@
 /*
  * NoakWeather Engineering Pipeline(TM) is a multi-source weather data engineering platform
- * Copyright (C) 2025 bclasky1539
+ * Copyright (C) 2025-2026 bclasky1539
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,169 +16,162 @@
  */
 package weather.ingestion.service;
 
-import weather.ingestion.service.source.noaa.NoaaAviationWeatherClient;
 import weather.model.ProcessingLayer;
 import weather.model.WeatherData;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import weather.exception.WeatherServiceException;
 
 import java.io.IOException;
+import java.time.Duration;
+import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
+import java.util.concurrent.*;
 
 /**
  * Speed Layer Processor for Lambda Architecture.
- * 
- * Responsibilities:
- * 1. Fetch weather data from external APIs (NOAA, OpenWeatherMap, etc.)
- * 2. Perform minimal processing/validation
+ * <p>
+ * REFACTORED to be completely generic - works with ANY weather data source.
+ * <p>
+ * Responsibilities (GENERIC ONLY):
+ * 1. Enrich weather data with generic metadata
+ * 2. Tag data with ProcessingLayer.SPEED_LAYER
  * 3. Upload to S3 for low-latency access
- * 4. Tag data with ProcessingLayer.SPEED_LAYER
- * 
+ * <p>
+ * NOT responsible for:
+ * - Source-specific validation (handled by orchestrators)
+ * - Fetching data from sources (handled by clients)
+ * - Business logic (handled by orchestrators)
+ * <p>
  * The Speed Layer prioritizes:
  * - Low latency (seconds to minutes)
  * - Recent data only (last 24-48 hours)
  * - Minimal processing (validation, basic enrichment)
- * 
- * This complements the Batch Layer which provides historical analysis.
- * 
- * Think of this as a "fast lane" - like express checkout at a grocery store.
- * It handles recent transactions quickly, while the main checkout (Batch Layer)
- * handles comprehensive inventory analysis.
- * 
- * NEW FUNCTIONALITY - Not present in legacy system
- * 
+ * <p>
+ * Think of this as the "express checkout lane" - it processes items quickly
+ * without worrying about what specific items they are.
+ *
  * @author bclasky1539
  *
  */
 public class SpeedLayerProcessor {
-    
+
     private static final Logger logger = LogManager.getLogger(SpeedLayerProcessor.class);
-    
-    private final NoaaAviationWeatherClient noaaClient;
+
     private final S3UploadService s3Service;
     private final ExecutorService executorService;
     private final int maxConcurrentRequests;
-    
+
     /**
-     * Creates a SpeedLayerProcessor with specified services.
-     * 
-     * @param noaaClient the NOAA weather client
+     * Creates a SpeedLayerProcessor with default concurrency.
+     *
      * @param s3Service the S3 upload service
      */
-    public SpeedLayerProcessor(NoaaAviationWeatherClient noaaClient, S3UploadService s3Service) {
-        this(noaaClient, s3Service, 5); // Default: 5 concurrent requests
+    public SpeedLayerProcessor(S3UploadService s3Service) {
+        this(s3Service, 10); // Default: 10 concurrent uploads
     }
-    
+
     /**
      * Creates a SpeedLayerProcessor with custom concurrency limit.
-     * 
-     * @param noaaClient the NOAA weather client
+     *
      * @param s3Service the S3 upload service
-     * @param maxConcurrentRequests maximum number of concurrent API requests
+     * @param maxConcurrentRequests maximum number of concurrent S3 uploads
      */
-    public SpeedLayerProcessor(NoaaAviationWeatherClient noaaClient, 
-                               S3UploadService s3Service,
-                               int maxConcurrentRequests) {
-        this.noaaClient = noaaClient;
+    public SpeedLayerProcessor(S3UploadService s3Service, int maxConcurrentRequests) {
         this.s3Service = s3Service;
         this.maxConcurrentRequests = maxConcurrentRequests;
         this.executorService = Executors.newFixedThreadPool(maxConcurrentRequests);
-        
-        logger.info("SpeedLayerProcessor initialized with {} concurrent threads", 
+
+        logger.info("SpeedLayerProcessor initialized with {} concurrent threads",
                 maxConcurrentRequests);
     }
-    
-    /**
-     * Processes weather data for a single station through the speed layer.
-     * 
-     * Flow:
-     * 1. Fetch from NOAA API
-     * 2. Validate data
-     * 3. Tag with SPEED_LAYER
-     * 4. Upload to S3
-     * 5. Return processed data
-     * 
-     * @param stationId the ICAO station identifier
-     * @return the processed WeatherData
-     * @throws IOException if ingestion or upload fails
-     */
-    public WeatherData processStation(String stationId) throws IOException {
-        logger.info("Processing station {} through Speed Layer", stationId);
-        
-        long startTime = System.currentTimeMillis();
-    
-        try {
-            // Step 1: Fetch from NOAA API
-            WeatherData weatherData = noaaClient.fetchLatestMetar(stationId);
-        
-            if (weatherData == null) {
-                throw new IOException("No weather data available for station: " + stationId);
-            }
-        
-            // Step 2: Validate and enrich
-            validateAndEnrich(weatherData);
-        
-            // Step 3: Tag with Speed Layer
-            weatherData.setProcessingLayer(ProcessingLayer.SPEED_LAYER);
-        
-            // Step 4: Upload to S3
-            String s3Key = s3Service.uploadWeatherData(weatherData);
-            weatherData.addMetadata("storage_location", s3Key);
-        
-            long duration = System.currentTimeMillis() - startTime;
-            logger.info("Processed station {} in {}ms (S3: {})", stationId, duration, s3Key);
-        
-            return weatherData;
 
-        } catch (WeatherServiceException e) {
-            logger.error("Failed to fetch weather data for station {}: {}", stationId, e.getMessage());
-            throw new IOException("Failed to process station: " + stationId, e);
+    /**
+     * Processes a single weather data record through the speed layer.
+     * <p>
+     * This is the core processing method - completely generic.
+     * <p>
+     * Flow:
+     * 1. Enrich with generic metadata (timestamp, processor info)
+     * 2. Tag with SPEED_LAYER
+     * 3. Upload to S3
+     * 4. Return processed data with S3 location
+     *
+     * @param weatherData the weather data to process (already validated by caller)
+     * @return the processed WeatherData with S3 location added
+     * @throws IOException if S3 upload fails
+     */
+    public WeatherData processWeatherData(WeatherData weatherData) throws IOException {
+        if (weatherData == null) {
+            throw new IOException("Weather data cannot be null");
         }
+
+        logger.debug("Processing weather data for station: {}", weatherData.getStationId());
+
+        Instant startTime = Instant.now();
+
+        // Step 1: Enrich with generic metadata
+        enrichWithMetadata(weatherData);
+
+        // Step 2: Tag with Speed Layer
+        weatherData.setProcessingLayer(ProcessingLayer.SPEED_LAYER);
+
+        // Step 3: Upload to S3
+        String s3Key = s3Service.uploadWeatherData(weatherData);
+        weatherData.addMetadata("s3_key", s3Key);
+        weatherData.addMetadata("processing_duration_ms",
+                Duration.between(startTime, Instant.now()).toMillis());
+
+        Duration duration = Duration.between(startTime, Instant.now());
+        logger.info("Processed weather data for station {} in {}ms (S3: {})",
+                weatherData.getStationId(), duration.toMillis(), s3Key);
+
+        return weatherData;
     }
 
     /**
-     * Processes multiple stations in parallel through the speed layer.
-     * More efficient than processing one at a time.
-     * 
-     * @param stationIds list of ICAO station identifiers
-     * @return list of processed WeatherData
+     * Processes multiple weather data records in parallel.
+     * <p>
+     * More efficient than processing one at a time when you have multiple
+     * records already fetched and validated.
+     *
+     * @param weatherDataList list of weather data to process
+     * @return list of successfully processed WeatherData
      */
-    public List<WeatherData> processStationsBatch(List<String> stationIds) {
-        logger.info("Processing {} stations in batch through Speed Layer", stationIds.size());
-        
-        long startTime = System.currentTimeMillis();
-        
-        // Create async tasks for each station
-        List<CompletableFuture<WeatherData>> futures = stationIds.stream()
-                .map(stationId -> CompletableFuture.supplyAsync(() -> {
+    public List<WeatherData> processWeatherDataBatch(List<WeatherData> weatherDataList) {
+        if (weatherDataList == null || weatherDataList.isEmpty()) {
+            logger.warn("Empty weather data list provided for batch processing");
+            return new ArrayList<>();
+        }
+
+        logger.info("Starting batch processing for {} weather records", weatherDataList.size());
+
+        Instant startTime = Instant.now();
+
+        // Create async tasks for each record
+        List<CompletableFuture<WeatherData>> futures = weatherDataList.stream()
+                .map(data -> CompletableFuture.supplyAsync(() -> {
                     try {
-                        return processStation(stationId);
+                        return processWeatherData(data);
                     } catch (IOException e) {
-                        logger.error("Failed to process station {}: {}", stationId, e.getMessage());
+                        logger.error("Failed to process weather data for station {}: {}",
+                                data.getStationId(), e.getMessage());
                         return null;
                     }
                 }, executorService))
-                .collect(Collectors.toList());
-        
+                .toList();
+
         // Wait for all tasks to complete
         CompletableFuture<Void> allFutures = CompletableFuture.allOf(
-                futures.toArray(CompletableFuture[]::new));
-        
+                futures.toArray(new CompletableFuture[0]));
+
         // Collect results
         List<WeatherData> results = new ArrayList<>();
         try {
-            allFutures.get(60, TimeUnit.SECONDS); // 60 second timeout
-            
+            // Wait up to 5 minutes for all uploads to complete
+            allFutures.get(5, TimeUnit.MINUTES);
+
             for (CompletableFuture<WeatherData> future : futures) {
                 WeatherData data = future.get();
                 if (data != null) {
@@ -186,155 +179,89 @@ public class SpeedLayerProcessor {
                 }
             }
         } catch (InterruptedException e) {
-            Thread.currentThread().interrupt(); // Restore interrupted status
+            Thread.currentThread().interrupt();
             logger.error("Batch processing interrupted: {}", e.getMessage());
         } catch (ExecutionException e) {
             logger.error("Batch processing execution failed: {}", e.getMessage());
         } catch (TimeoutException e) {
-            logger.error("Batch processing timed out after 60 seconds: {}", e.getMessage());
-}
-        
-        long duration = System.currentTimeMillis() - startTime;
-        logger.info("Batch processing complete: {}/{} succeeded in {}ms", 
-                results.size(), stationIds.size(), duration);
-        
+            logger.error("Batch processing timed out after 5 minutes");
+        }
+
+        Duration duration = Duration.between(startTime, Instant.now());
+        logger.info("Batch processing complete: {}/{} succeeded in {}ms",
+                results.size(), weatherDataList.size(), duration.toMillis());
+
         return results;
     }
-    
-    /**
-     * Processes weather data for a geographic region (bounding box).
-     * 
-     * @param minLat minimum latitude
-     * @param minLon minimum longitude
-     * @param maxLat maximum latitude
-     * @param maxLon maximum longitude
-     * @return list of processed WeatherData
-     * @throws IOException if ingestion or upload fails
-     */
-    public List<WeatherData> processRegion(double minLat, double minLon, 
-                                           double maxLat, double maxLon) throws IOException {
-        logger.info("Processing region through Speed Layer: ({},{}) to ({},{})", 
-                minLat, minLon, maxLat, maxLon);
-        
-        try {
-            // Step 1: Fetch all stations in bounding box
-            List<WeatherData> weatherDataList = noaaClient.fetchMetarByBoundingBox(
-                    minLat, minLon, maxLat, maxLon);
-        
-            if (weatherDataList.isEmpty()) {
-                logger.warn("No weather data found in specified region");
-                return weatherDataList;
-            }
-        
-            // Step 2: Process and upload to S3
-            for (WeatherData data : weatherDataList) {
-                validateAndEnrich(data);
-                data.setProcessingLayer(ProcessingLayer.SPEED_LAYER);
-            }
-        
-            List<String> s3Keys = s3Service.uploadWeatherDataBatch(weatherDataList);
-        
-            // Step 3: Update storage locations
-            for (int i = 0; i < Math.min(weatherDataList.size(), s3Keys.size()); i++) {
-                weatherDataList.get(i).addMetadata("storage_location", s3Keys.get(i));
-            }
-        
-            logger.info("Processed {} stations in region", weatherDataList.size());
 
-            return weatherDataList;
-        
-        } catch (WeatherServiceException e) {
-            logger.error("Failed to fetch weather data for region: {}", e.getMessage());
-            throw new IOException("Failed to process region", e);
-        }
-    }
-    
     /**
-     * Validates weather data and adds enrichment metadata.
-     * 
-     * @param weatherData the weather data to validate
-     * @throws IOException if validation fails
+     * Enriches weather data with generic metadata.
+     * <p>
+     * This is NOT source-specific validation - just adding metadata
+     * that applies to all weather data regardless of source.
+     * <p>
+     * Adds:
+     * - validated: "true" (assumes caller already validated)
+     * - validation_timestamp: current timestamp
+     * - processor: "SpeedLayerProcessor"
+     * - processor_version: version identifier
+     *
+     * @param weatherData the weather data to enrich
      */
-    private void validateAndEnrich(WeatherData weatherData) throws IOException {
-        // Validate required fields
-        if (weatherData.getStationId() == null || weatherData.getStationId().isEmpty()) {
-            throw new IOException("Weather data missing required field: stationId");
-        }
-        
-        if (weatherData.getSource() == null) {
-            throw new IOException("Weather data missing required field: dataSource");
-        }
-        
-        // Mark as validated
+    private void enrichWithMetadata(WeatherData weatherData) {
         weatherData.addMetadata("validated", "true");
         weatherData.addMetadata("validation_timestamp", LocalDateTime.now().toString());
         weatherData.addMetadata("processor", "SpeedLayerProcessor");
+        weatherData.addMetadata("processor_version", "2.0");
+
+        logger.debug("Enriched weather data with generic metadata for station: {}",
+                weatherData.getStationId());
     }
-    
-    /**
-     * Runs a continuous ingestion loop for specified stations.
-     * Useful for real-time monitoring scenarios.
-     * 
-     * @param stationIds list of stations to monitor
-     * @param intervalSeconds interval between ingestion cycles (in seconds)
-     * @param durationMinutes how long to run (in minutes)
-     */
-    public void runContinuousIngestion(List<String> stationIds, 
-                                       int intervalSeconds, 
-                                       int durationMinutes) {
-        logger.info("Starting continuous ingestion for {} stations (interval: {}s, duration: {}m)",
-                stationIds.size(), intervalSeconds, durationMinutes);
-        
-        long endTime = System.currentTimeMillis() + (durationMinutes * 60 * 1000L);
-        int cycleCount = 0;
-        
-        while (System.currentTimeMillis() < endTime) {
-            cycleCount++;
-            logger.info("Starting ingestion cycle #{}", cycleCount);
-            
-            List<WeatherData> results = processStationsBatch(stationIds);
-            logger.info("Cycle #{} complete: {} stations processed", cycleCount, results.size());
-            
-            // Sleep until next cycle
-            try {
-                Thread.sleep(intervalSeconds * 1000L);
-            } catch (InterruptedException e) {
-                logger.warn("Continuous ingestion interrupted");
-                Thread.currentThread().interrupt();
-                break;
-            }
-        }
-        
-        logger.info("Continuous ingestion complete: {} cycles executed", cycleCount);
-    }
-    
+
     /**
      * Returns statistics about the speed layer processor.
-     * 
+     *
      * @return statistics map
      */
     public java.util.Map<String, Object> getStatistics() {
+        ThreadPoolExecutor executor = (ThreadPoolExecutor) executorService;
+
         return java.util.Map.of(
                 "max_concurrent_requests", maxConcurrentRequests,
-                "executor_active_threads", ((java.util.concurrent.ThreadPoolExecutor) executorService).getActiveCount(),
-                "executor_queue_size", ((java.util.concurrent.ThreadPoolExecutor) executorService).getQueue().size()
+                "executor_active_threads", executor.getActiveCount(),
+                "executor_queue_size", executor.getQueue().size(),
+                "executor_completed_tasks", executor.getCompletedTaskCount()
         );
     }
-    
+
+    /**
+     * Checks if the speed layer processor is healthy.
+     * Verifies S3 connectivity.
+     *
+     * @return true if S3 is accessible
+     */
+    public boolean isHealthy() {
+        return s3Service.isBucketAccessible();
+    }
+
     /**
      * Shuts down the speed layer processor gracefully.
+     * Waits for in-flight processing to complete.
      */
     public void shutdown() {
         logger.info("Shutting down SpeedLayerProcessor");
         executorService.shutdown();
+
         try {
-            if (!executorService.awaitTermination(30, TimeUnit.SECONDS)) {
+            if (!executorService.awaitTermination(60, TimeUnit.SECONDS)) {
+                logger.warn("Executor did not terminate in time, forcing shutdown");
                 executorService.shutdownNow();
             }
         } catch (InterruptedException e) {
             executorService.shutdownNow();
             Thread.currentThread().interrupt();
         }
+
         logger.info("SpeedLayerProcessor shutdown complete");
     }
 }
